--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,17 +13,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/coverRecView"
-            android:layout_width="match_parent"
-            android:layout_height="480dp"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewpager"
+            app:layout_anchorGravity="bottom"
+            android:layout_width="270dp"
+            android:layout_height="370dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+                    />
+
+        <!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/coverRecView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="480dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
 
 
-        </androidx.recyclerview.widget.RecyclerView>
+<!--        </androidx.recyclerview.widget.RecyclerView>-->
 
 
 
@@ -34,8 +43,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
-            app:layout_constraintTop_toBottomOf="@+id/coverRecView">
+            app:layout_constraintTop_toBottomOf="@+id/viewpager">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -178,22 +186,23 @@
             android:id="@+id/animationView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:lottie_rawRes="@raw/circle_progress" />
 
-        <ImageView
-            android:id="@+id/visualSearchBtn_homePage"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_visual_search"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+<!--        <ImageView-->
+<!--            android:id="@+id/visualSearchBtn_homePage"-->
+<!--            android:layout_width="35dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_marginTop="35dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:src="@drawable/ic_visual_search"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
