--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ProductDetailsActivity">
+    tools:context=".Ui.ProductActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,8 +22,8 @@
 
 
             <ImageView
-                android:id="@+id/productImage_ProductDetailsPage"
-                android:layout_width="match_parent"
+                android:id="@+id/product_image"
+                android:layout_width="wrap_content"
                 android:layout_height="450dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,11 +45,11 @@
 
 
                 <ImageView
-                    android:id="@+id/backIv_ProfileFrag"
+                    android:id="@+id/product_backarrow"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/ic_back"
-                    app:tint="@color/white" />
+                    app:tint="@color/primary" />
 
                 <androidx.legacy.widget.Space
                     android:layout_weight="1"
@@ -72,7 +72,7 @@
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productImage_ProductDetailsPage">
+                app:layout_constraintTop_toBottomOf="@+id/product_image">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/productName_ProductDetailsPage"
+                        android:id="@+id/product_name"
                         android:layout_width="0dp"
                         android:maxEms="30"
                         android:layout_height="match_parent"
@@ -95,20 +95,20 @@
                         android:textSize="25sp" />
 
                     <TextView
-                        android:id="@+id/productPrice_ProductDetailsPage"
+                        android:id="@+id/product_price"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:fontFamily="@font/metropolis_semibold"
                         android:gravity="end"
                         android:text=""
-                        android:textColor="@color/mainText"
+                        android:textColor="@color/primary"
                         android:textSize="25sp" />
                 </LinearLayout>
 
                 <TextView
                     android:layout_marginTop="10dp"
-                    android:id="@+id/productBrand_ProductDetailsPage"
+                    android:id="@+id/product_brand"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -143,7 +143,7 @@
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/productDes_ProductDetailsPage"
+                    android:id="@+id/product_des"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -155,61 +155,12 @@
                     android:text=""
                     android:textSize="13sp" />
 
-
-
-                <LinearLayout
-                    android:id="@+id/shippingAddress_productDetailsPage"
-                    android:layout_marginTop="30dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp">
-
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/metropolis_regular"
-                            android:text="Shipping info"
-                            android:textColor="@color/mainText"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/cardNumberProduct_Details"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/metropolis_regular"
-                            android:text="Add Your Cart"
-                            android:textColor="@color/textAd"
-                            android:textSize="12sp" />
-
-                    </LinearLayout>
-
-                    <ImageView
-                        android:layout_width="22dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -226,17 +177,11 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:fontFamily="@font/metropolis_regular"
-                            android:text=""
+                            android:text="4.7 rating based on customers"
                             android:textSize="12sp" />
 
                     </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="22dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
-                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -244,7 +189,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
@@ -272,20 +216,20 @@
                             android:textColor="@color/mainText"
                             android:textSize="25sp" />
 
-                        <androidx.legacy.widget.Space
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1" />
+<!--                        <androidx.legacy.widget.Space-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:layout_weight="1" />-->
 
-                        <TextView
-                            android:id="@+id/product_GroupViewAll"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/metropolis_regular"
-                            android:gravity="center"
-                            android:text="View all"
-                            android:textColor="@color/mainText"
-                            android:textSize="12sp" />
+<!--                        <TextView-->
+<!--                            android:id="@+id/product_GroupViewAll"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:fontFamily="@font/metropolis_regular"-->
+<!--                            android:gravity="center"-->
+<!--                            android:text="View all"-->
+<!--                            android:textColor="@color/mainText"-->
+<!--                            android:textSize="12sp" />-->
 
                     </LinearLayout>
 
@@ -304,7 +248,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_marginBottom="20dp"
-                    android:id="@+id/RecomRecView_ProductDetailsPage"
+                    android:id="@+id/recommended_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp">
