--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-                    />
+            />
 
         <!--        <androidx.recyclerview.widget.RecyclerView-->
 <!--            android:id="@+id/coverRecView"-->
@@ -186,7 +186,7 @@
             android:id="@+id/animationView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
