--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -10,7 +10,7 @@
 
         <TextView
             android:layout_marginTop="30dp"
-            android:id="@+id/MyCartText"
+            android:id="@+id/cart_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -25,7 +25,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/cartRecView"
+        android:id="@+id/cart_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomCartLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MyCartText">
+        app:layout_constraintTop_toBottomOf="@+id/cart_text">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -67,7 +67,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/totalPriceCartFrag"
+                android:id="@+id/total_price"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -80,7 +80,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/checkOut_CartPage"
+            android:id="@+id/cart_checkout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
