--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
-    tools:context=".Ui.Fragments.LikeFragment">
+    tools:context=".Ui.Fragments.OrdersFragment">
 
     <LinearLayout
         android:gravity="center"
-        android:id="@+id/emptyBagMsgLayout"
+        android:id="@+id/emptyOrderMsgLayout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/empty_favourite"
+            android:text="Empty Orders"
             android:textColor="@color/textAd"
             android:fontFamily="@font/metropolis_semibold"
             android:textSize="20sp"
@@ -41,5 +41,16 @@
 
         </TextView>
     </LinearLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:visibility="gone"
+        android:id="@+id/animationView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_rawRes="@raw/circle_progress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
