--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,35 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".Ui.Fragments.HomeFragment">
+    tools:context=".Ui.Fragments.HomeFragment"
+    android:fillViewport="true"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/MainLayout_homeFrag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewpager"
-            app:layout_anchorGravity="bottom"
-            android:layout_width="270dp"
-            android:layout_height="370dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
+            app:cardCornerRadius="25dp"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="243dp"
+            app:cardElevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/coverRecView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="480dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
-
-
-<!--        </androidx.recyclerview.widget.RecyclerView>-->
-
-
+            >
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/viewpager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/background"
+                        />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/newLayout"
@@ -43,7 +41,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewpager">
+            app:layout_constraintTop_toBottomOf="@+id/card_view">
 
             <LinearLayout
                 android:layout_width="match_parent"
