order details page completed

--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -55,13 +55,13 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"/>
-                <ImageView
-                    android:id="@+id/searchIv_ProfileFrag"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/ic_search"
-                    app:tint="@color/white"
-                    />
+<!--                <ImageView-->
+<!--                    android:id="@+id/searchIv_ProfileFrag"-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:src="@drawable/ic_search"-->
+<!--                    app:tint="@color/white"-->
+<!--                    />-->
 
             </LinearLayout>
 
