--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -24,7 +24,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/order_recycler_view"
+        android:id="@+id/orders_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
