--- a/app/src/main/res/layout/item_orders.xml
+++ b/app/src/main/res/layout/item_orders.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/backgroundAd"
-    app:cardElevation="0dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp"
     android:layout_marginRight="5dp"
     android:layout_marginLeft="5dp"
@@ -11,21 +11,6 @@
     android:layout_marginTop="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/categoryImage_CateSingle"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:src="@drawable/order_bg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </ImageView>
 
         <TextView
             android:id="@+id/order_number"
@@ -42,9 +27,6 @@
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categoryImage_CateSingle" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.cardview.widget.CardView>
