--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -22,6 +22,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/orders_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:cardElevation="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/order_text"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/orders_image"
+            android:layout_height="120dp"
+            android:src="@drawable/banner_image"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            />
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/orders_recycler_view"
@@ -33,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/order_text">
+        app:layout_constraintTop_toBottomOf="@+id/orders_card">
 
     </androidx.recyclerview.widget.RecyclerView>
 
