--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
         <EditText
-            android:id="@+id/nameEt_signUpPage"
+            android:id="@+id/register_fullname"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="15sp"
@@ -46,7 +46,7 @@
             android:maxLines="1" />
         <EditText
             android:layout_marginTop="10dp"
-            android:id="@+id/emailEt_signUpPage"
+            android:id="@+id/register_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="15sp"
@@ -62,7 +62,7 @@
 
         <EditText
             android:layout_marginTop="10dp"
-            android:id="@+id/PassEt_signUpPage"
+            android:id="@+id/register_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="15sp"
@@ -77,7 +77,7 @@
             android:maxLines="1" />
         <EditText
             android:layout_marginTop="10dp"
-            android:id="@+id/cPassEt_signUpPage"
+            android:id="@+id/register_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="15sp"
@@ -92,7 +92,7 @@
             android:maxLines="1" />
 
         <Button
-            android:id="@+id/signUpBtn_signUpPage"
+            android:id="@+id/register_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_bg"
