cart page completed and only check out functionality left

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -122,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:id="@+id/cartMore"
+                    android:id="@+id/cart_remove"
                     android:src="@drawable/ic_baseline_clear_24"
                     app:tint="@color/mainText"
                     />
