--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -119,7 +119,7 @@
                     android:textSize="13sp" />
 
                 <RatingBar
-                    android:id="@+id/productRating_singleProduct"
+                    android:id="@+id/product_rating"
                     style="@style/Widget.AppCompat.RatingBar.Indicator"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
@@ -155,32 +155,32 @@
                     android:text=""
                     android:textSize="13sp" />
 
-                    <LinearLayout
-                        android:layout_marginTop="20dp"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginRight="10dp"
-                        android:orientation="vertical">
+<!--                    <LinearLayout-->
+<!--                        android:layout_marginTop="20dp"-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="match_parent"-->
+<!--                                    android:layout_marginLeft="10dp"-->
+<!--                                    android:layout_marginRight="10dp"-->
+<!--                        android:orientation="vertical">-->
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/metropolis_regular"
-                            android:text="Ratings"
-                            android:textColor="@color/mainText"
-                            android:textSize="16sp" />
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:fontFamily="@font/metropolis_regular"-->
+<!--                            android:text="Ratings"-->
+<!--                            android:textColor="@color/mainText"-->
+<!--                            android:textSize="16sp" />-->
 
-                        <TextView
-                            android:id="@+id/RatingProductDetails"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/metropolis_regular"
-                            android:text="4.7 rating based on customers"
-                            android:textSize="12sp" />
+<!--                        <TextView-->
+<!--                            android:id="@+id/RatingProductDetails"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginTop="5dp"-->
+<!--                            android:fontFamily="@font/metropolis_regular"-->
+<!--                            android:text="4.7 rating based on customers"-->
+<!--                            android:textSize="12sp" />-->
 
-                    </LinearLayout>
+<!--                    </LinearLayout>-->
 
             </LinearLayout>
 
