--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -14,8 +14,8 @@
         android:title="Orders"
         android:icon="@drawable/ic_bag"/>
     <item
-        android:id="@+id/musicMenu"
-        android:title="Music"
+        android:id="@+id/vibeMenu"
+        android:title="Vibe"
         android:icon="@drawable/ic_outline_music_note_24"/>
     <item
         android:id="@+id/profileMenu"
