--- a/app/src/main/res/layout/activity_admin_products.xml
+++ b/app/src/main/res/layout/activity_admin_products.xml
@@ -46,6 +46,32 @@
             app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/admin_product_searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/background"
+        app:layout_constraintBottom_toTopOf="@id/products_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin_linearLayout"
+        app:cardCornerRadius="25dp"
+        android:layout_margin="6dp">
+
+        <SearchView
+            android:id="@+id/admin_product_SearchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:iconifiedByDefault="false"
+            android:searchIcon="@drawable/ic_baseline_search_24"
+            >
+
+        </SearchView>
+
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/products_recycler_view"
@@ -58,7 +84,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/admin_linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/admin_product_searchLayout">
 
     </androidx.recyclerview.widget.RecyclerView>
 
