--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -34,8 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/orders_image"
-            android:layout_height="120dp"
-            android:src="@drawable/banner_image"
+            android:layout_height="wrap_content"
+            android:src="@drawable/banner"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             />
